fix text overflow

--- a/assets/styles/movieCard.css
+++ b/assets/styles/movieCard.css
@@ -154,7 +154,7 @@ section[id^="Page"] .poster {
 
 .movie-title {
   margin: 0 1rem;
-  height: 8vh;
+  min-height: 8vh;
   width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
